--- a/packages.config
+++ b/packages.config
@@ -9,5 +9,5 @@
       <package id="filezilla" />
       <package id="irfanview" />
       <package id="microsoft-windows-terminal" />
-      <package id="everything" />
+      <package id="nextcloud-client" />      
     </packages>
