--- a/packages.config
+++ b/packages.config
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
     <packages>
-      <package id="googlechrome" />
       <package id="7zip.install" />
-      <package id="vlc" />
       <package id="git.install" />
-      <package id="vscode" />
       <package id="microsoft-teams.install" />
-      <package id="filezilla" />
-      <package id="irfanview" />
-      <package id="microsoft-windows-terminal" />
-      <package id="nextcloud-client" />      
+      <package id="github-desktop" />
+      <package id="powertoys" />
     </packages>
